content/_generated-doc/3.2/config/quarkus-kubernetes-config-group-prometheus-config.adoc

:summaryTableId: quarkus-kubernetes-config-group-prometheus-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kubernetes-config-group-prometheus-config_configuration]]link:#quarkus-kubernetes-config-group-prometheus-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-prometheus-config_quarkus-knative-prometheus-annotations]]`link:#quarkus-kubernetes-config-group-prometheus-config_quarkus-knative-prometheus-annotations[quarkus.knative.prometheus.annotations]`


[.description]
--
When true (the default), emit a set of annotations to identify services that should be scraped by prometheus for metrics. In configurations that use the Prometheus operator with ServiceMonitor, annotations may not be necessary.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_PROMETHEUS_ANNOTATIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_PROMETHEUS_ANNOTATIONS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-prometheus-config_quarkus-knative-prometheus-prefix]]`link:#quarkus-kubernetes-config-group-prometheus-config_quarkus-knative-prometheus-prefix[quarkus.knative.prometheus.prefix]`


[.description]
--
Define the annotation prefix used for scrape values, this value will be used as the base for other annotation name defaults. Altering the base for generated annotations can make it easier to define re-labeling rules and avoid unexpected knock-on effects. The default value is `prometheus.io` See Prometheus example: https://github.com/prometheus/prometheus/blob/main/documentation/examples/prometheus-kubernetes.yml

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_PROMETHEUS_PREFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_PROMETHEUS_PREFIX+++`
endif::add-copy-button-to-env-var[]
--|string 
|`prometheus.io`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-prometheus-config_quarkus-knative-prometheus-scrape]]`link:#quarkus-kubernetes-config-group-prometheus-config_quarkus-knative-prometheus-scrape[quarkus.knative.prometheus.scrape]`


[.description]
--
Define the annotation used to indicate services that should be scraped. By default, `/scrape` will be appended to the defined prefix.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_PROMETHEUS_SCRAPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_PROMETHEUS_SCRAPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-prometheus-config_quarkus-knative-prometheus-path]]`link:#quarkus-kubernetes-config-group-prometheus-config_quarkus-knative-prometheus-path[quarkus.knative.prometheus.path]`


[.description]
--
Define the annotation used to indicate the path to scrape. By default, `/path` will be appended to the defined prefix.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_PROMETHEUS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_PROMETHEUS_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-prometheus-config_quarkus-knative-prometheus-port]]`link:#quarkus-kubernetes-config-group-prometheus-config_quarkus-knative-prometheus-port[quarkus.knative.prometheus.port]`


[.description]
--
Define the annotation used to indicate the port to scrape. By default, `/port` will be appended to the defined prefix.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_PROMETHEUS_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_PROMETHEUS_PORT+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-prometheus-config_quarkus-knative-prometheus-scheme]]`link:#quarkus-kubernetes-config-group-prometheus-config_quarkus-knative-prometheus-scheme[quarkus.knative.prometheus.scheme]`


[.description]
--
Define the annotation used to indicate the scheme to use for scraping By default, `/scheme` will be appended to the defined prefix.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_PROMETHEUS_SCHEME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_PROMETHEUS_SCHEME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-prometheus-config_quarkus-kubernetes-prometheus-annotations]]`link:#quarkus-kubernetes-config-group-prometheus-config_quarkus-kubernetes-prometheus-annotations[quarkus.kubernetes.prometheus.annotations]`


[.description]
--
When true (the default), emit a set of annotations to identify services that should be scraped by prometheus for metrics. In configurations that use the Prometheus operator with ServiceMonitor, annotations may not be necessary.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_PROMETHEUS_ANNOTATIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_PROMETHEUS_ANNOTATIONS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-prometheus-config_quarkus-kubernetes-prometheus-prefix]]`link:#quarkus-kubernetes-config-group-prometheus-config_quarkus-kubernetes-prometheus-prefix[quarkus.kubernetes.prometheus.prefix]`


[.description]
--
Define the annotation prefix used for scrape values, this value will be used as the base for other annotation name defaults. Altering the base for generated annotations can make it easier to define re-labeling rules and avoid unexpected knock-on effects. The default value is `prometheus.io` See Prometheus example: https://github.com/prometheus/prometheus/blob/main/documentation/examples/prometheus-kubernetes.yml

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_PROMETHEUS_PREFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_PROMETHEUS_PREFIX+++`
endif::add-copy-button-to-env-var[]
--|string 
|`prometheus.io`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-prometheus-config_quarkus-kubernetes-prometheus-scrape]]`link:#quarkus-kubernetes-config-group-prometheus-config_quarkus-kubernetes-prometheus-scrape[quarkus.kubernetes.prometheus.scrape]`


[.description]
--
Define the annotation used to indicate services that should be scraped. By default, `/scrape` will be appended to the defined prefix.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_PROMETHEUS_SCRAPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_PROMETHEUS_SCRAPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-prometheus-config_quarkus-kubernetes-prometheus-path]]`link:#quarkus-kubernetes-config-group-prometheus-config_quarkus-kubernetes-prometheus-path[quarkus.kubernetes.prometheus.path]`


[.description]
--
Define the annotation used to indicate the path to scrape. By default, `/path` will be appended to the defined prefix.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_PROMETHEUS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_PROMETHEUS_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-prometheus-config_quarkus-kubernetes-prometheus-port]]`link:#quarkus-kubernetes-config-group-prometheus-config_quarkus-kubernetes-prometheus-port[quarkus.kubernetes.prometheus.port]`


[.description]
--
Define the annotation used to indicate the port to scrape. By default, `/port` will be appended to the defined prefix.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_PROMETHEUS_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_PROMETHEUS_PORT+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-prometheus-config_quarkus-kubernetes-prometheus-scheme]]`link:#quarkus-kubernetes-config-group-prometheus-config_quarkus-kubernetes-prometheus-scheme[quarkus.kubernetes.prometheus.scheme]`


[.description]
--
Define the annotation used to indicate the scheme to use for scraping By default, `/scheme` will be appended to the defined prefix.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_PROMETHEUS_SCHEME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_PROMETHEUS_SCHEME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-prometheus-config_quarkus-openshift-prometheus-annotations]]`link:#quarkus-kubernetes-config-group-prometheus-config_quarkus-openshift-prometheus-annotations[quarkus.openshift.prometheus.annotations]`


[.description]
--
When true (the default), emit a set of annotations to identify services that should be scraped by prometheus for metrics. In configurations that use the Prometheus operator with ServiceMonitor, annotations may not be necessary.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_PROMETHEUS_ANNOTATIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_PROMETHEUS_ANNOTATIONS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-prometheus-config_quarkus-openshift-prometheus-prefix]]`link:#quarkus-kubernetes-config-group-prometheus-config_quarkus-openshift-prometheus-prefix[quarkus.openshift.prometheus.prefix]`


[.description]
--
Define the annotation prefix used for scrape values, this value will be used as the base for other annotation name defaults. Altering the base for generated annotations can make it easier to define re-labeling rules and avoid unexpected knock-on effects. The default value is `prometheus.io` See Prometheus example: https://github.com/prometheus/prometheus/blob/main/documentation/examples/prometheus-kubernetes.yml

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_PROMETHEUS_PREFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_PROMETHEUS_PREFIX+++`
endif::add-copy-button-to-env-var[]
--|string 
|`prometheus.io`


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-prometheus-config_quarkus-openshift-prometheus-scrape]]`link:#quarkus-kubernetes-config-group-prometheus-config_quarkus-openshift-prometheus-scrape[quarkus.openshift.prometheus.scrape]`


[.description]
--
Define the annotation used to indicate services that should be scraped. By default, `/scrape` will be appended to the defined prefix.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_PROMETHEUS_SCRAPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_PROMETHEUS_SCRAPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-prometheus-config_quarkus-openshift-prometheus-path]]`link:#quarkus-kubernetes-config-group-prometheus-config_quarkus-openshift-prometheus-path[quarkus.openshift.prometheus.path]`


[.description]
--
Define the annotation used to indicate the path to scrape. By default, `/path` will be appended to the defined prefix.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_PROMETHEUS_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_PROMETHEUS_PATH+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-prometheus-config_quarkus-openshift-prometheus-port]]`link:#quarkus-kubernetes-config-group-prometheus-config_quarkus-openshift-prometheus-port[quarkus.openshift.prometheus.port]`


[.description]
--
Define the annotation used to indicate the port to scrape. By default, `/port` will be appended to the defined prefix.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_PROMETHEUS_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_PROMETHEUS_PORT+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-prometheus-config_quarkus-openshift-prometheus-scheme]]`link:#quarkus-kubernetes-config-group-prometheus-config_quarkus-openshift-prometheus-scheme[quarkus.openshift.prometheus.scheme]`


[.description]
--
Define the annotation used to indicate the scheme to use for scraping By default, `/scheme` will be appended to the defined prefix.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_PROMETHEUS_SCHEME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_PROMETHEUS_SCHEME+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===